added design, removed deprecated methods of docker-java

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -4,7 +4,7 @@ log4j.logger.deng=INFO
 
 log4j.appender.FILE=org.apache.log4j.RollingFileAppender
 log4j.appender.FILE.append=true
-log4j.appender.FILE.file=E:\\GitRepos\\Docker-Envoy\\log.out
+log4j.appender.FILE.file=/Users/paritoshanand/Documents/projects/Docker-Envoy/log.out
 log4j.appender.FILE.threshold=DEBUG
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.FILE.layout.ConversionPattern=%d [%t] %-5p (%F:%L) - %m%n
