--- a/docker.properties
+++ b/docker.properties
@@ -1,3 +1,9 @@
 com.docker.envoy.dockerUri=tcp://192.168.99.100:2376
-com.docker.envoy.certpath=/Users/paritoshanand/.docker/machine/machines/SwarmMaster
+com.docker.envoy.certpath=/Users/paritoshanand/.docker/machine/machines/default
+
+# kafka properties
+metadata.broker.list=192.168.99.100:9092
+serializer.class=kafka.serializer.StringEncoder
+partitioner.class=example.producer.SimplePartitioner
+request.required.acks=1
 
