--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,11 @@
 	    <artifactId>log4j</artifactId>
 	    <version>1.2.17</version>
 	</dependency>
-		
+	<dependency>
+	    <groupId>org.apache.kafka</groupId>
+	    <artifactId>kafka-clients</artifactId>
+	    <version>0.8.2.1</version>
+	</dependency>
     
   </dependencies>
 </project>
