--- a/docker.properties
+++ b/docker.properties
@@ -2,8 +2,8 @@ com.docker.envoy.dockerUri=tcp://192.168.99.100:2376
 com.docker.envoy.certpath=/Users/paritoshanand/.docker/machine/machines/default
 
 # kafka properties
-metadata.broker.list=192.168.99.100:9092
-serializer.class=kafka.serializer.StringEncoder
-partitioner.class=example.producer.SimplePartitioner
-request.required.acks=1
-
+bootstrap.servers=172.16.47.68:9092
+acks=all
+retries=0
+key.serializer=org.apache.kafka.common.serialization.StringSerializer
+value.serializer=org.apache.kafka.common.serialization.StringSerializer
