--- a/pom.xml
+++ b/pom.xml
@@ -31,10 +31,17 @@
 	    <artifactId>log4j</artifactId>
 	    <version>1.2.17</version>
 	</dependency>
+	<!-- Kafka -->
 	<dependency>
 	    <groupId>org.apache.kafka</groupId>
-	    <artifactId>kafka-clients</artifactId>
-	    <version>0.8.2.1</version>
+	    <artifactId>kafka_2.10</artifactId>
+	    <version>0.10.0.0</version>
+	</dependency>
+	<!-- Jackson -->
+	<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-databind</artifactId>
+		<version>2.8.1</version>
 	</dependency>
     
   </dependencies>
