sending auxillary events to kafka

--- a/docker.properties
+++ b/docker.properties
@@ -1,3 +1,4 @@
+com.docker.envoy.mode=single-host
 com.docker.envoy.dockerUri=tcp://192.168.99.100:2376
 com.docker.envoy.certpath=/Users/paritoshanand/.docker/machine/machines/default
 
