--- a/docker.properties
+++ b/docker.properties
@@ -7,4 +7,6 @@ bootstrap.servers=192.168.99.100:9092
 acks=all
 retries=0
 key.serializer=org.apache.kafka.common.serialization.StringSerializer
-value.serializer=org.apache.kafka.common.serialization.StringSerializer
+value.serializer=org.apache.kafka.common.serialization.ByteBufferSerializer
+# default value for linger.ms is 0
+# linger.ms=0
