docker-java 3.0.6 release

--- a/docker.properties
+++ b/docker.properties
@@ -1,9 +1,10 @@
 com.docker.envoy.mode=single-host
-com.docker.envoy.dockerUri=tcp://192.168.99.100:2376
+com.docker.envoy.dockerUri=tcp://localhost:2376
+com.docker.envoy.tlsverify=false
 com.docker.envoy.certpath=/Users/paritoshanand/.docker/machine/machines/default
 
 # kafka properties
-bootstrap.servers=192.168.99.100:9092
+bootstrap.servers=localhost:9092
 acks=all
 retries=0
 key.serializer=org.apache.kafka.common.serialization.StringSerializer
