--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 	<dependency>
 	    <groupId>com.github.docker-java</groupId>
 	    <artifactId>docker-java</artifactId>
-	    <version>3.0.1-SNAPSHOT</version>
+	    <version>3.0.6</version>
 	</dependency>
 	<!-- log4j -->
 	<dependency> 
@@ -31,7 +31,6 @@
 	    <artifactId>log4j</artifactId>
 	    <version>1.2.17</version>
 	</dependency>
-	<!-- Kafka -->
 	<dependency>
 	    <groupId>org.apache.kafka</groupId>
 	    <artifactId>kafka_2.10</artifactId>
