--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,20 @@
   <version>1.0-SNAPSHOT</version>
   <name>Docker-Envoy</name>
   <url>http://maven.apache.org</url>
-  <dependencies>
+   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <!-- kafka -->
+    <dependency>
+	    <groupId>org.apache.kafka</groupId>
+	    <artifactId>kafka_2.11</artifactId>
+	    <version>0.8.2.1</version>
+  		<scope>compile</scope>
+	</dependency>
     <!-- docker-java -->
 	<dependency>
 	    <groupId>com.github.docker-java</groupId>
@@ -31,21 +38,30 @@
 	    <artifactId>log4j</artifactId>
 	    <version>1.2.17</version>
 	</dependency>
-	<dependency>
-	    <groupId>org.apache.kafka</groupId>
-	    <artifactId>kafka_2.10</artifactId>
-	    <version>0.10.0.0</version>
-	</dependency>
+	
 	<!-- Jackson -->
 	<dependency>
 		<groupId>com.fasterxml.jackson.core</groupId>
 		<artifactId>jackson-databind</artifactId>
 		<version>2.8.1</version>
 	</dependency>
-    
+	<!-- Elasticsearch -->
+	<dependency>
+	    <groupId>org.elasticsearch</groupId>
+	    <artifactId>elasticsearch</artifactId>
+	    <version>2.4.0</version>
+	</dependency>
   </dependencies>
   
   <build>
+  	<resources>
+        <resource>
+            <directory>${basedir}/src/main/resources</directory>
+            <includes>
+                <include>*.properties</include>
+            </includes>
+        </resource>
+    </resources>
   	<plugins>
   		<plugin>
 	        <groupId>org.apache.maven.plugins</groupId>
